--- a/client/src/components/FormCreate/Form.module.css
+++ b/client/src/components/FormCreate/Form.module.css
@@ -1,142 +1,91 @@
-.cssGui13feta0{
-    color:#ffffff;
-    cursor:pointer;
-    display:block;
-    overflow:hidden;
-    -webkit-transition:all 350ms 0ms cubic-bezier(0, 0, 1, 1);
-    transition:all 350ms 0ms cubic-bezier(0, 0, 1, 1);
-    border-radius:0px;
-    background-color:#4b0082;
-    text-decoration-line:none;
-    border: 0.3px solid #48a8a1;
-    border-radius: 20px;
-}
-.cssGui13feta0:hover {
-    color:#4b0082;
-    background-color:#48a8a1;
-}
-
-.cssGui4f95g8{
-
-    width:100%;
-    display:block;
-    max-width:100%;
-    height: 35%;
-    object-fit: cover;
-
-}
-
-.cssGui4f95g8 > img{
-
-    width:100%;
-    margin: auto;
-    border-radius:8px;
-
-}
-
-.cssGuitl6zyz{
-
-    padding:32px;
-
-}
-
-.headRating{
-
-  display: flex;
-  border: 1px solid #48a8a1;
-  padding: 3%;
-  padding-top: 15px;
-  margin-bottom: 2.5%;
-
-}
-
-.headRating > .starImg{
-
-  width: 25px;
-  margin-top: -2%;
-  margin-left: 15%;
+.formDiv svg{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #48a8a1;
   
-
 }
 
-.headRating > .starP{
+.cssGui1yb8fau{
 
-  font-family: Inter;
-  font-size: 0.9rem;
-  margin: 0;
-  text-align: left;
-  padding-left: 2%;
-  display: block;
-  color: #48a8a1;
-}
-
-
-
-.cssGuidmdb0g{
-
-    font-family: Inter;
-    font-size: 0.75rem;
-    margin: 0;
-    text-align: left;
-    margin-right: 10px;
-    display: block;
+    background-color:#48a8a281;
+    -webkit-box-pack:center;
+    -ms-flex-pack:center;
+    -webkit-justify-content:center;
+    justify-content:center;
+    -webkit-align-items:center;
+    -webkit-box-align:center;
+    -ms-flex-align:center;
+    align-items:center;
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
+    display:flex;
+    height:100%;
+    width:100%;
+    margin-top: -35%;
 
 }
-
-.plataformasTitle {
-
-    margin-top: -20px !important;
-    font-size: 0.95rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    margin-left:8.5%;
-
+.cssGui15dast1{
+    background-color:#ffffff;
+    border-radius:0px;
+    max-width:100%;
+    padding:32px;
+    border:1px solid currentcolor;
+    width:40rem;
 }
-
-.plataformasDiv > .plataformaChild{
-
-   font-size: 0.80rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    color: #48a8a1;
-    margin-left:8.5%;
-}
-
-.genresTitle {
-
-    margin-top: 5px !important;
-    font-size: 0.95rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    margin-left:8.5%;
-
-}
-
-.genresDiv > .genresChild{
-
-   font-size: 0.80rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    color: #48a8a1;
-    margin-left:9%;
-}
-
-.cssGui1od07ga{
+.cssGui1uuxs66{
+    -webkit-flex-direction:column;
+    -ms-flex-direction:column;
+    flex-direction:column;
+    position:static;
+    padding:0px;
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
+    display:flex;
     margin:0px;
-    font-size:2rem;
-    text-align:left;
-    font-family:Inter;
-    line-height:1.25;
+    border:0px none #000000;
+    gap:0.5rem 0rem;
 }
+.cssGui1uuxs66 button{
+    margin-top:16px;
+}
+.cssGuiLaze4w{
+    font-weight:400;
+    position:static;
+    font-size:24px;
+    padding:0px;
+    display:block;
+    margin:0 0 16px 0;
+    border:0px none #000000;
+}
+.cssGui1ds78pt{
 
-.cssGuiA5e3nn{
+    text-transform:none;
+    font-family:Inter;
+    font-size:0.875rem;
+    display:block;
+    color:#000000;
+}
+.cssGui1doevve{
+    margin-bottom:4px;
+    display:block;
+}
+.cssGui1a1qsev{
+    border-radius:0px;
+    font-weight:400;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
     max-width:80ch;
-    margin:0;
-    color:inherit;
+    font-size:1rem;
+    padding:8px;
+    display:block;
+    border:1px solid #000000;
+    width:100%;
 }
 
 /* Boton */
@@ -159,11 +108,9 @@
   font-family:Inter;
   font-size: 100%;
   line-height: 1.5;
-  margin-left: 8%;
-  margin-top: 5%;
+  margin: 0;
   -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
   padding: 0;
-  margin-bottom: 0.5%;
 }
 .btn76:disabled {
   cursor: default;
@@ -187,7 +134,7 @@
   outline: 4px solid #4b0082;
   outline-offset: -4px;
   overflow: hidden;
-  padding: 0.8rem 2.4rem;
+  padding: 1.2rem 3rem;
   position: relative;
   text-transform: uppercase;
   transition: 0.2s linear 0.1s;
