--- a/client/src/views/SearchResults/Results.module.css
+++ b/client/src/views/SearchResults/Results.module.css
@@ -1,143 +1,67 @@
-.cssGui13feta0{
-    color:#ffffff;
-    cursor:pointer;
-    display:block;
-    overflow:hidden;
-    -webkit-transition:all 350ms 0ms cubic-bezier(0, 0, 1, 1);
-    transition:all 350ms 0ms cubic-bezier(0, 0, 1, 1);
-    border-radius:0px;
-    background-color:#4b0082;
-    text-decoration-line:none;
-    border: 0.3px solid #48a8a1;
-    border-radius: 20px;
-}
-.cssGui13feta0:hover {
-    color:#4b0082;
-    background-color:#48a8a1;
-}
+.divContainer{
 
-.cssGui4f95g8{
-
-    width:100%;
-    display:block;
-    max-width:100%;
-    height: 35%;
-    object-fit: cover;
-
-}
-
-.cssGui4f95g8 > img{
-
-    width:100%;
-    margin: auto;
-    border-radius:8px;
-
-}
-
-.cssGuitl6zyz{
-
-    padding:32px;
-
-}
-
-.headRating{
-
-  display: flex;
-  border: 1px solid #48a8a1;
-  padding: 3%;
-  padding-top: 15px;
-  margin-bottom: 2.5%;
-
-}
-
-.headRating > .starImg{
-
-  width: 25px;
-  margin-top: -2%;
-  margin-left: 15%;
-  
-
-}
-
-.headRating > .starP{
-
-  font-family: Inter;
-  font-size: 0.9rem;
-  margin: 0;
-  text-align: left;
-  padding-left: 2%;
-  display: block;
-  color: #48a8a1;
-}
-
-
-
-.cssGuidmdb0g{
-
+    display: flex;
+    flex-direction: row;
     font-family: Inter;
-    font-size: 0.75rem;
-    margin: 0;
+    background: #48a8a1;
+    
+}
+
+
+.divContainer > .sideContainer{
+    
+    margin-top: 45px;
+    width: 20%;
+    background: #48a8a1;
+    color: #4b0082;
+    padding: 0.8%;
+    height: auto;
+    position: fixed;
+    z-index: 5;
+    height: 100vh;
     text-align: left;
-    margin-right: 10px;
-    display: block;
 
 }
-
-.plataformasTitle {
-
-    margin-top: -20px !important;
-    font-size: 0.95rem;
-    margin: 0;
+.divContainer > .sideContainer > h3{
+    
+    font-size: 0.7rem;
     text-align: left;
-    display: block;
-    margin-left:8.5%;
 
 }
 
-.plataformasDiv > .plataformaChild{
+.divContainer > .vGContainer {
 
-   font-size: 0.80rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    color: #48a8a1;
-    margin-left:8.5%;
-}
-
-.genresTitle {
-
-    margin-top: 5px !important;
-    font-size: 0.95rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    margin-left:8.5%;
+    background: #4b0082;
+    margin: auto;
+    padding-top: 3.2%;
+    width: 100%;
 
 }
 
-.genresDiv > .genresChild{
+.vGContainer > .vGCards {
+    margin: 0.3%;
+    margin-left: 22% !important;
+    margin: auto;
+    margin-top: 0.5%;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 32.5% 32.5% 32.5%;
+    grid-auto-rows: minmax(15%, auto);
 
-   font-size: 0.80rem;
-    margin: 0;
-    text-align: left;
-    display: block;
-    color: #48a8a1;
-    margin-left:9%;
+}
+.h1Search{
+    font-size: 3.5em;
+    font-variant-caps:all-small-caps;
+    background-color: #48a8a1;
+    padding: 2.5%;
+    width: 80%;
+    box-shadow: 0px 0px 5px 1px #4b0082;
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    margin: auto;
+    margin-top:10%;
 }
 
-.cssGui1od07ga{
-    margin:0px;
-    font-size:2rem;
-    text-align:left;
-    font-family:Inter;
-    line-height:1.25;
-}
-
-.cssGuiA5e3nn{
-    max-width:80ch;
-    margin:0;
-    color:inherit;
-}
 
 /* Boton */
 .btn76,
@@ -159,7 +83,6 @@
   font-family:Inter;
   font-size: 100%;
   line-height: 1.5;
-  margin-left: 8%;
   margin-top: 5%;
   -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
   padding: 0;
