--- a/client/src/components/FormCreate/Form.module.css
+++ b/client/src/components/FormCreate/Form.module.css
@@ -1,15 +1,5 @@
-.formDiv svg{
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #48a8a1;
-  
-}
-
 .cssGui1yb8fau{
 
-    background-color:#48a8a281;
     -webkit-box-pack:center;
     -ms-flex-pack:center;
     -webkit-justify-content:center;
@@ -24,16 +14,17 @@
     display:flex;
     height:100%;
     width:100%;
-    margin-top: -35%;
 
 }
 .cssGui15dast1{
-    background-color:#ffffff;
+    background-color:#ffffffb0;
     border-radius:0px;
     max-width:100%;
     padding:32px;
-    border:1px solid currentcolor;
-    width:40rem;
+    border:1px solid #4b0082;
+    width: 40rem;
+    height: auto;
+
 }
 .cssGui1uuxs66{
     -webkit-flex-direction:column;
@@ -46,31 +37,52 @@
     display:-ms-flexbox;
     display:flex;
     margin:0px;
-    border:0px none #000000;
+    border:0px none #4b0082;
     gap:0.5rem 0rem;
 }
+
 .cssGui1uuxs66 button{
     margin-top:16px;
 }
 .cssGuiLaze4w{
-    font-weight:400;
+    font-weight:600;
+    color: #4b0082;
+    text-align: left;
     position:static;
     font-size:24px;
     padding:0px;
     display:block;
     margin:0 0 16px 0;
-    border:0px none #000000;
+    border:0px none #4b0082;
 }
 .cssGui1ds78pt{
 
     text-transform:none;
+    text-align: left;
     font-family:Inter;
-    font-size:0.875rem;
+    font-size:16px;
     display:block;
-    color:#000000;
+    font-weight: 500;
+    color:#4b0082;
+    margin: 0;
 }
+
+.cssGui1ds78pt p{
+
+  margin-top: 10px;
+  font-size:12px;
+  color: rgb(0, 0, 0);
+
+} 
+
+.cssGui1ds78pt > .error{
+
+  font-size:10px;
+  color: rgb(255, 0, 0);
+
+} 
 .cssGui1doevve{
-    margin-bottom:4px;
+
     display:block;
 }
 .cssGui1a1qsev{
@@ -84,8 +96,11 @@
     font-size:1rem;
     padding:8px;
     display:block;
-    border:1px solid #000000;
+    border:1px solid #4b0082;
+    color: #4b0082;
     width:100%;
+    background-color: #48a8a1;
+    margin-bottom: 15px;
 }
 
 /* Boton */
@@ -205,3 +220,158 @@
   opacity: 1;
   transition: transform 0.2s linear 0.6s;
 }
+
+.btn762,
+.btn762 *,
+.btn762 :after,
+.btn762 :before,
+.btn762:after,
+.btn762:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+.btn762 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #48a8a1;
+  background-image: none;
+  color: #a10000;
+  cursor: pointer;
+  font-family:Inter;
+  font-size: 100%;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+}
+.btn762:disabled {
+  cursor: default;
+}
+.btn762:-moz-focusring {
+  outline: auto;
+}
+.btn762 svg {
+  display: block;
+  vertical-align: middle;
+}
+.btn762 [hidden] {
+  display: none;
+}
+.btn762 {
+  --neon: #ff0000;
+  box-sizing: border-box;
+  display: block;
+  font-weight: 900;
+  -webkit-mask-image: none;
+  outline: 4px solid #a10000;
+  outline-offset: -4px;
+  overflow: hidden;
+  padding: 1.2rem 3rem;
+  position: relative;
+  text-transform: uppercase;
+  transition: 0.2s linear 0.1s;
+}
+.btn762:hover {
+  background: var(--neon);
+  box-shadow: 0 0 5px var(--neon), 0 0 25px var(--neon), 0 0 50px var(--neon),
+    0 0 100px var(--neon);
+  color: #000000;
+  outline-color: transparent;
+  transition: 0.2s linear 0.6s;
+}
+.btn762 span {
+  display: block;
+  inset: 0;
+  position: absolute;
+}
+.btn762 a{
+  color: #4b0082;
+  text-decoration: none;
+
+}
+.btn762:hover a {
+  color: #fff;
+  transition: 0.2s linear 0.6s;
+}
+.btn762 .top {
+  border-top: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateX(calc(-100% + var(--progress, 0%)));
+  transition: none;
+}
+.btn762:hover .top {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear;
+}
+.btn762 .right {
+  border-right: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateY(calc(-100% + var(--progress, 0%)));
+  transition: none;
+}
+.btn762:hover .right {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.2s;
+}
+.btn762 .bottom {
+  border-bottom: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateX(calc(100% - var(--progress, 0%)));
+  transition: none;
+}
+.btn762:hover .bottom {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.4s;
+}
+.btn762 .left {
+  border-left: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateY(calc(100% - var(--progress, 0%)));
+  transition: none;
+}
+.btn762:hover .left {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.6s;
+}
+
+.platformsList{
+
+    width: 100%;
+    height: 200px;
+    font-size: 0.9em;
+    color: #4b0082;
+    border: 1px solid #4b0082;
+    background-color: #48a8a1;
+    font-variant-caps:petite-caps ;
+    font-weight: bold;
+    padding: 1%;
+    overflow: auto;
+    margin-bottom: 10px;
+
+}
+.genresList{
+
+    width: 100%;
+    height: 200px;
+    font-size: 0.9em;
+    color: #4b0082;
+    border: 1px solid #4b0082;
+    background-color: #48a8a1;
+    font-variant-caps:petite-caps ;
+    font-weight: bold;
+    padding: 1%;
+    overflow: auto;
+    margin-bottom: 10px;
+
+}
+.error{
+
+  font-size:10px;
+  color: rgb(255, 0, 0);
+  text-align: left;
+
+} 
