--- a/client/src/components/FormCreate/Form.module.css
+++ b/client/src/components/FormCreate/Form.module.css
@@ -233,9 +233,9 @@
 .btn762 {
   -webkit-tap-highlight-color: transparent;
   -webkit-appearance: button;
-  background-color: #48a8a1;
+  background-color: #a10000;
   background-image: none;
-  color: #a10000;
+  color: #ffffff;
   cursor: pointer;
   font-family:Inter;
   font-size: 100%;
