--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -8,8 +8,6 @@
     max-width: 30%;
     color: #4b0082;
     font-family: Inter;
-    font-variant-caps: small-caps;
-    box-shadow: 0px 0px 5px 1px #48a8a1;
 
 }
 
@@ -29,6 +27,7 @@
   background-color: #48a8a1;
   background-image: none;
   color: #4b0082;
+  font-weight: bold;
   cursor: pointer;
   font-family:Inter;
   font-size: 100%;
@@ -56,7 +55,7 @@
   --neon: #48a8a1;
   box-sizing: border-box;
   display: block;
-  font-weight: 640;
+  font-weight: bold;
   -webkit-mask-image: none;
   outline: 4px solid #4b0082;
   outline-offset: -4px;
