--- a/client/src/components/Videogame/Videogame.module.css
+++ b/client/src/components/Videogame/Videogame.module.css
@@ -43,7 +43,7 @@
 .headRating{
 
   display: flex;
-  border: 1px solid #48a8a1;
+  border: 1px solid #ffffff;
   padding: 3%;
   padding-top: 15px;
   margin-bottom: 2.5%;
@@ -67,7 +67,7 @@
   text-align: left;
   padding-left: 2%;
   display: block;
-  color: #48a8a1;
+  color: #ffffff;
 }
 
 
@@ -86,11 +86,12 @@
 .plataformasTitle {
 
     margin-top: -20px !important;
-    font-size: 0.95rem;
+    font-size: 1rem;
     margin: 0;
     text-align: left;
     display: block;
     margin-left:8.5%;
+    margin-bottom: 2%;
 
 }
 
@@ -100,18 +101,19 @@
     margin: 0;
     text-align: left;
     display: block;
-    color: #48a8a1;
-    margin-left:8.5%;
+    color: #ffffff;
+    margin-left:12%;
 }
 
 .genresTitle {
 
     margin-top: 5px !important;
-    font-size: 0.95rem;
+    font-size: 1rem;
     margin: 0;
     text-align: left;
     display: block;
     margin-left:8.5%;
+    margin-bottom: 2%;
 
 }
 
@@ -121,8 +123,8 @@
     margin: 0;
     text-align: left;
     display: block;
-    color: #48a8a1;
-    margin-left:9%;
+    color: #ffffff;
+    margin-left:12%;
 }
 
 .cssGui1od07ga{
@@ -160,7 +162,7 @@
   font-size: 100%;
   line-height: 1.5;
   margin-left: 8%;
-  margin-top: 5%;
+  margin-top: 2%;
   -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
   padding: 0;
   margin-bottom: 0.5%;
