--- a/client/src/views/CreatedVideogames/Created.module.css
+++ b/client/src/views/CreatedVideogames/Created.module.css
@@ -54,12 +54,13 @@
     font-variant-caps:all-small-caps;
     background-color: #48a8a1;
     padding: 2.5%;
-    width: 80%;
+    width: 40%;
     box-shadow: 0px 0px 5px 1px #4b0082;
     border-radius: 20px;
     color: rgb(255, 255, 255);
     margin: auto;
     margin-top:10%;
+    margin-left: 33rem
 }
 
 
@@ -183,15 +184,20 @@
 }
 .deleteVg{
 
-  background-color: #ffffff;
+  background-color: #48a8a1;
   padding: 0.5%;
   width: 15%;
-  color: #48a8a1;
+  color: #4b0082;
   font-weight: bold;
   border: 1px solid #4b0082;
   margin-bottom: -5px;
   display: block;
   margin: auto;
   border-radius: 10px;
+
+}
+.deleteVg:hover{
+
+  cursor: pointer;
 
 }
