--- a/client/src/views/Videogame/Videogame.module.css
+++ b/client/src/views/Videogame/Videogame.module.css
@@ -235,3 +235,11 @@ color:#48a8a1;
   margin-right: 1%;
 
 }
+
+.pMapsDetail{
+
+  border: 1px solid #48a8a1;
+  padding: 0.2%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+}
