--- a/client/src/views/Videogames/Videogames.module.css
+++ b/client/src/views/Videogames/Videogames.module.css
@@ -47,6 +47,224 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 32.5% 32.5% 32.5%;
-    grid-auto-rows: minmax(17%, auto);
+    grid-auto-rows: minmax(22%, auto);
 
+}
+
+.headerContainer {
+    
+    margin-top: -20px;
+	
+}
+
+.selectsContainer {
+	margin: 30px 0;
+	background-color: #4b0082;
+	width: 90%;
+	padding: 5%;
+    padding-top: 0.5px;
+    border-radius: 15px;
+}
+
+.selectsContainer > div > p {
+	color: #48a8a1;
+	text-align: center;
+	font-weight: bold;
+	font-size: 1em;
+	margin-bottom: 0%;
+}
+
+.sortContainer {
+	background-color: #48a8a1 !important;
+	height: 45px;
+	border-radius: 100px;
+    padding: 0px 15px !important;
+}
+
+.sortContainer select {
+	background-color: #48a8a1 !important;
+	outline: none;
+	border: none;
+	font-size: 1em;
+	color:#4b0082;
+    border-radius: 120px;
+    width: 95%;
+    padding-top: 12px;
+	cursor: pointer;
+}
+
+.sortContainer select option {
+	background-color:#48a8a1 !important;
+	outline: none !important;
+	width: 100% !important;
+	border: none !important;
+	font-size: 1em;
+	color:#4b0082;
+	cursor: pointer;
+}
+
+.sortContainer > select > option:hover {
+	background: green !important;
+
+}
+
+.selectContainer {
+	background-color: #48a8a1 !important;
+	display: flex;
+	align-items: center;
+	height: 45px;
+	border-radius: 100px;
+	padding: 0px 15px !important;
+
+}
+
+.selectContainer select {
+	background-color: #48a8a1 !important;
+	outline: none;
+	border: none;
+	font-size: 1em;
+	color:#4b0082;
+	cursor: pointer;
+}
+
+
+.pageBtnContainer {
+
+	background-color:#4b0082;
+	border-radius: 100px;
+	width: 90%;
+	margin: auto;
+	padding-top: 2.5%;
+	color: white;
+	text-align: center;
+
+}
+
+.btn {
+	background-color: #329ddc;
+	width: 50px;
+	height: 40px;
+	border: none;
+	color:#9a1e38;
+	font-size: 1em;
+	border-radius: 0.4em;
+	cursor: pointer;
+	background-color: #329ddc;
+	border-radius: 100px;
+	transition: all 0.2s ease-in-out;
+	margin: 0.1%;
+}
+
+.btn:hover {
+	background-color: #9a1e38;
+	color: white;
+	transform: scale(95%);
+}
+
+.btn.btnPage {
+	background-color: #1c79af;
+	color:#ffffff;
+}
+
+.overlay {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+}
+
+@media (max-width: 900px) {
+	.selectsContainer {
+		flex-direction: column;
+	}
+
+	.selectsContainer div {
+		width: 100%;
+	}
+
+	.inputBtn {
+		width: 100px !important;
+	}
+
+	.countriesContainer {
+		justify-content: space-around;
+	}
+}
+
+.bienvenido{
+    text-align: center;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.resultsH4{
+
+    width: 90%;
+	padding: 5%;
+    margin: 0;
+    margin-top: -20px;
+    text-transform: uppercase;
+    font-size: 16px;
+    text-align: center;
+
+}
+
+.resultsP{
+    margin: 0;
+    width: 90%;
+	padding: 5%;
+    margin: 0;
+    margin-top: -20px;
+    font-size: 12px;
+	text-align: left;
+
+}
+
+.resultsP2{
+    margin: 0;
+	text-align: center;
+    width: 90%;
+	padding: 5%;
+    margin: 0;
+    margin-top: -5px;
+    font-size: 12px;
+
+}
+
+.resultsP3{
+    margin: 0;
+	text-align: left;
+    width: 90%;
+	padding: 5%;
+    margin: 0;
+    margin-top: -5px;
+    font-size: 12px;
+
+}
+
+.pageBtnContainer > .pageContainer{
+	margin: auto;
+	
+}
+
+.btnArrow{
+	color:#48a8a1;
+	font-size: 1.6em;
+	display:contents;
+	font-weight: bold;
+}
+.btnArrow:hover{
+	cursor: pointer;
+	color: #ffffff;
+}
+
+.btnP{
+
+	color:#ffffff;
+	font-weight: bold;
+	font-size: 1em;
+	margin-right: 3%;
+	margin-left: 3%;
+	
 }
